# Clarabel.rs

./: .gitignore  CHANGELOG.md  CITATION.bib  Cargo.toml  LICENSE.md  README.md  build.rs  clarabel-0.11.1-cp39-abi3-manylinux_2_39_x86_64.whl  lib.rs  pyproject.toml  rustfmt.toml
.cargo/: config.toml
.github/: codecov.yaml  codecov.yml  dependabot.yml
.github/workflows/: ci.yml  msrv.yml  pypi-linux-test.yaml  pypi-macos-test.yaml  pypi-win-test.yaml  pypi.yaml  security-audit.yml  testpypi.yaml
crates/algebra/: Cargo.toml  mod.rs
crates/algebra/native/: cscmatrix.rs  mod.rs
crates/algebra/src/: cscmatrix.rs  lib.rs
crates/algebra/tests/: vector.rs
crates/clarabel_algebra/: Cargo.toml
crates/clarabel_algebra/src/: cscmatrix.rs  floats.rs  lib.rs  matrix_types.rs  matrix_utils.rs  traits.rs
crates/clarabel_algebra/tests/: matrix.rs  vector.rs
crates/clarabel_api/: Cargo.toml
crates/clarabel_api/src/: lib.rs
crates/clarabel_internal/: Cargo.toml
crates/clarabel_internal/src/: lib.rs
crates/clarabel_julia/: Cargo.toml  test_amd.jl  test_solve.jl  types.jl
crates/clarabel_julia/src/: lib.rs
crates/clarabel_python/: Cargo.toml  scratch.py  test_qp.py
crates/clarabel_python/src/: cones_py.rs  cscmatrix_py.rs  default_types_py.rs  impl_default_py.rs  lib.rs  module.rs
crates/clarabel_qdldl/: Cargo.toml
crates/clarabel_qdldl/src/: lib.rs  test.rs
crates/clarabel_solver/: Cargo.toml  tests.rs
crates/clarabel_solver/src/: components.rs  lib.rs  solver.rs
crates/clarabel_solver/src/cones/: compositecone.rs  coneset.rs  mod.rs  nonnegativecone.rs  socone.rs  zerocone.rs
crates/clarabel_solver/src/core/: components.rs  mod.rs  settings.rs  solver.rs  traits.rs
crates/clarabel_solver/src/core/cones/: compositecone.rs  mod.rs  nonnegativecone.rs  socone.rs  zerocone.rs
crates/clarabel_solver/src/core/kktsolvers/: mod.rs
crates/clarabel_solver/src/core/kktsolvers/direct/: mod.rs
crates/clarabel_solver/src/core/kktsolvers/direct/quasidef/: datamap.rs  directldlkktsolver.rs  directquasidefinitekktsolver.rs  mod.rs  utils.rs
crates/clarabel_solver/src/core/kktsolvers/direct/quasidef/ldlsolvers/: mod.rs  qdldl.rs
crates/clarabel_solver/src/default/: equilibration.rs  kktsystem.rs  mod.rs  problemdata.rs  residuals.rs  solveinfo.rs  solveresult.rs  variables.rs
crates/clarabel_solver/src/implementations/default/: equilibration.rs  info.rs  info_print.rs  kktsystem.rs  mod.rs  problemdata.rs  residuals.rs  settings.rs  solveinfo.rs  solver.rs  solveresult.rs  variables.rs
crates/clarabel_solver/src/kktsolvers/: mod.rs
crates/clarabel_solver/src/kktsolvers/direct/: mod.rs
crates/clarabel_solver/src/kktsolvers/direct/quasidef/: datamap.rs  directquasidefinitekktsolver.rs  mod.rs  utils.rs
crates/clarabel_solver/src/kktsolvers/direct/quasidef/ldlsolvers/: mod.rs  qdldl.rs
crates/clarabel_solver/src/kktsolvers/direct_quasidefinite/: datamap.rs  directquasidefinitekktsolver.rs  mod.rs  utils.rs
crates/clarabel_solver/src/kktsolvers/direct_quasidefinite/ldlsolvers/: qdldl.rs
crates/clarabel_solver/tests/: cones.rs
crates/clarabel_timers/: Cargo.toml
crates/qdldl/: Cargo.toml  mod.rs
crates/qdldl/src/: lib.rs  test.rs
crates/solver/: Cargo.toml  lib.rs  settings.rs
crates/solver/cones/: coneset.rs  nonnegativecone.rs  socone.rs  zerocone.rs
crates/solver/default/: data.rs  variables.rs
crates/solver/examples/: example_qp.rs  example_socp.rs
crates/solver/kktsolvers/: mod.rs
crates/solver/kktsolvers/direct_ldl/: directldlkktsolver.rs  ldldatamap.rs  mod.rs  utils.rs
crates/solver/src/: conicvector.rs  lib.rs  settings.rs  solver.rs
crates/solver/src/cones/: coneset.rs  mod.rs  nonnegativecone.rs  socone.rs  zerocone.rs
crates/solver/src/default/: data.rs  equilibration.rs  kktsystem.rs  mod.rs  problemdata.rs  residuals.rs  solveinfo.rs  solveresult.rs  variables.rs
crates/solver/src/kktsolvers/: mod.rs
crates/solver/src/kktsolvers/direct_quasidefinite/: datamap.rs  directquasidefinitekktsolver.rs  mod.rs  utils.rs
crates/solver/src/kktsolvers/direct_quasidefinite/ldlsolvers/: mod.rs  qdldl.rs
crates/timers/: Cargo.toml
examples/: example_big_box.rs  example_qp.rs  example_socp.rs
examples/data/: hs35.json
examples/julia/: example_warm_start.jl  test_mu_access.jl
examples/python/: example_box.py  example_callback.py  example_expcone.py  example_faer.py  example_json.py  example_pardiso.py  example_powcone.py  example_qp.py  example_qp_update.py  example_sdp.py  example_socp.py  example_warm_start_py.py  qp_example.py  test_mu_access.py
examples/rust/: example_box.rs  example_box_faer.rs  example_callback.rs  example_custom_initialization.rs  example_expcone.rs  example_json.rs  example_lp.rs  example_powcone.rs  example_qp.rs  example_qp_faer.rs  example_sdp.rs  example_socp.rs  example_warm_start.rs  example_wasm.rs
html/: rustdocs-header.html
python/clarabel/: __init__.py
src/: conicvector.rs  lib.rs  tests.rs
src/algebra/: adjoint.rs  cscmatrix.rs  error_types.rs  floats.rs  math_traits.rs  matrix_dense_3.rs  matrix_traits.rs  matrix_types.rs  matrix_utils.rs  mod.rs  native.rs  reshaped.rs  scalarmath.rs  symmetric.rs  traits.rs  utils.rs  vecmath.rs
src/algebra/csc/: core.rs  (+4 more)
src/cones/: coneset.rs  mod.rs  nonnegativecone.rs  socone.rs  zerocone.rs
src/default/: data.rs  equilibration.rs  mod.rs  residuals.rs
src/io/: mod.rs
src/julia/: README.md  interface.rs  mod.rs  types.rs
src/python/: Cargo.toml  cones_py.rs  cscmatrix_py.rs  impl_default_py.rs  io.rs  lib.rs  mod.rs  module_py.rs
src/qdldl/: mod.rs  qdldl.rs  test.rs
src/solver/: mod.rs
src/stdio/: mod.rs
src/timers/: mod.rs  timers.rs
src/utils/: atomic.rs  infbounds.rs
tests/: api_dimension_checks.rs  basic_eq_constrained.rs  basic_expcone.rs  basic_genpowcone.rs  basic_lp.rs  basic_powcone.rs  basic_qp.rs  basic_sdp.rs  basic_socp.rs  basic_unconstrained.rs  callbacks.rs  data_updating.rs  equilibration_bounds.rs  json_io.rs  mixed_conic.rs  presolve.rs  print_streams.rs  sdp_chordal.rs  warm_start.rs
(+177 files in other folders)
