[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "clarabel"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "numpy",
    "scipy"
] 
classifiers = [
    "Programming Language :: Rust",
]

[tool.maturin]
python-source = "python"
features = ["python"]