[package]
name = "clarabel_api"
version = "0.1.2"
authors = ["Paul Goulart <paul.goulart@eng.ox.ac.uk>"]
edition = "2021"
license = "Apache-2.0"
description = "Crate to export a reorganized set of API modules for users"
keywords = ["optimization", "math"]
categories = ["optimization"]

[dependencies]
clarabel_algebra = {path = "../clarabel_algebra"}
clarabel_qdldl   = {path = "../clarabel_qdldl"}
clarabel_solver  = {path = "../clarabel_solver"}
clarabel_timers  = {path = "../clarabel_timers"}
