[package]
name = "clarabel_python"
version = "0.1.0"
edition = "2021"

[lib]
name = "clarabel_python"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"
clarabel_internal = {path = "../clarabel_internal"}

[dependencies.pyo3]
version = "0.16.1"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py37" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.7
features = ["extension-module", "abi3-py37"]
